<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">美食速递</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab01_name">待处理</string>
    <string name="tab02_name">已处理</string>
    <string name="tab03_name">已关闭</string>
    <string name="sup_choose_user_picture">选择照片作为头像</string>

    <!-- login page -->
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_submit">登入</string>
    <string name="login_locked">登陆锁定 !!! \n 联系管理员 或 重启动应用</string>
    <string name="login_attempt">还可以尝试 %d 次</string>
    <string name="login_loading_tip">登陆中...</string>
    <string name="login_error">用户名或密码错误</string>
    <string name="login_validation">用户名或密码不能为空</string>
    <string name="login_no_network_tip">没有连接到Internet, 应用即将退出。</string>

    <!-- Profile Page -->
    <string name="prf_email">邮箱</string>
    <string name="prf_full_name">名字</string>
    <string name="prf_change">更改</string>
    <string name="prf_title">我的资料</string>
    <string name="prf_phone">电话</string>
    <string name="prf_status_message">状态</string>
    <string name="prf_done">完成</string>
    <string name="prf_user_id">ID</string>

    <!-- tasks pages -->
    <string name="task_loading_tip">加载数据中 ...</string>
    <string name="pull_to_refresh_release_label">释放刷新 ...</string>
    <string name="pull_to_refresh_pull_label">下拉刷新 ...</string>
    <string name="pull_to_refresh_refreshing_label">@string/task_loading_tip</string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>
    <string name="title_activity_done_order_detail">DoneOrderDetailActivity</string>

</resources>
