<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginPageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:background="@drawable/top1_bg">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:src="@drawable/actionbar_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="#cccccc"
                android:textSize="18dp"
                android:text="@string/app_name" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="10dp"
            android:text="@string/login_username"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/usernameET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_marginLeft="35dp"
            android:layout_toRightOf="@+id/textView2"
            android:hint="">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="40dp"
            android:text="@string/login_password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignLeft="@+id/usernameET"
            android:layout_alignRight="@+id/usernameET"
            android:hint=""
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/attemptsLeftTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="48dp"
            android:text="@string/login_attempt"
            android:visibility="invisible"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordET"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="94dp"
            android:onClick="authenticateLogin"
            android:text="@string/login_submit"
            android:background="@color/green"
            android:textColor="@color/blanchedalmond"/>

        <TextView
            android:id="@+id/numberOfRemainingLoginAttemptsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/attemptsLeftTV"
            android:layout_alignTop="@+id/attemptsLeftTV"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/loginLockedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginBtn"
            android:layout_marginTop="35dp"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="invisible" />
    </RelativeLayout>
</LinearLayout>