<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_frame"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:id="@+id/change_avatar_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_general_selector"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.arrking.android.component.RoundedImageView
                    style="@style/AvatarImageView"
                    android:id="@+id/avatar_imageview"
                    android:duplicateParentState="true"
                    app:border_color="@color/dark_gray"
                    app:border_width="@dimen/avatar_border_width"
                    app:oval="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_general_selector"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/label_email_textview"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prf_email"
                    android:textColor="@color/dark_gray" />

                <TextView
                    android:id="@+id/email_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:textColor="@color/dark_gray"
                    android:clickable="false"
                    android:ellipsize="end"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>


            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/prf_full_name"
                android:textColor="@color/dark_gray" />

            <RelativeLayout
                android:id="@+id/change_fullname_relativelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_general_selector"
                android:clickable="true"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/fullname_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@null"
                    android:clickable="false"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_size" />

                <!--<TextView-->
                    <!--android:id="@+id/change_fullname_textview"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:background="@drawable/button_general_selector"-->
                    <!--android:clickable="false"-->
                    <!--android:duplicateParentState="true"-->
                    <!--android:text="@string/prf_change"-->
                    <!--android:textColor="@color/link_text_color"-->
                    <!--android:textSize="@dimen/text_size" />-->

            </RelativeLayout>

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/prf_user_id"
                android:textColor="@color/dark_gray" />

            <RelativeLayout
                android:id="@+id/change_phone_relativelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_general_selector"
                android:clickable="true"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/phone_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:textColor="@color/dark_gray"
                    android:duplicateParentState="true"
                    android:ellipsize="end"
                    android:focusableInTouchMode="true"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size" />

                <!--<TextView-->
                    <!--android:id="@+id/change_phone_textview"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:background="@drawable/button_general_selector"-->
                    <!--android:clickable="false"-->
                    <!--android:duplicateParentState="true"-->
                    <!--android:text="@string/prf_change"-->
                    <!--android:textColor="@color/link_text_color"-->
                    <!--android:textSize="@dimen/text_size" />-->
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
    <ImageButton
        android:id="@+id/logout_imagebutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_general_selector"
        android:paddingBottom="30dip"
        android:src="@drawable/ic_logout" />
</FrameLayout>
